--- a/app/src/main/res/layout/custom_scope_row.xml
+++ b/app/src/main/res/layout/custom_scope_row.xml
@@ -16,60 +16,102 @@
     <LinearLayout
         android:id="@+id/custom_row"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_weight="1">
+        android:layout_height="fill_parent"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/scope_data_icon"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:padding="2dp"
+            android:padding="5dp"
             android:src="@mipmap/ic_launcher" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
             android:orientation="vertical"
             android:padding="5dp"
-            android:id="@+id/scope_data_holder">
+            android:id="@+id/scope_data_holder"
+            android:layout_weight="1">
 
             <TextView
                 android:id="@+id/scope_data_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Title"
-                android:textSize="20dp"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
-            <TextView
-                android:id="@+id/scope_data_subtitle"
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="true"
-                android:text="Subtitle" />
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/scope_data_subtitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="true"
+                    android:text="Subtitle"
+                    android:textIsSelectable="true"
+                    android:textSize="10dp"
+                    android:layout_weight="1" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"></LinearLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
-        <ImageButton
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/imageButton"
-            android:background="@android:drawable/ic_input_add"
-            android:contentDescription="@android:drawable/ic_input_add"
-            android:src="@android:drawable/ic_input_add" />
+            android:id="@+id/scope_add_holder"
+            android:layout_weight="3"
+            android:gravity="right">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageButton"
+                android:background="@android:drawable/ic_input_add"
+                android:contentDescription="@android:drawable/ic_input_add"
+                android:src="@android:drawable/ic_input_add"
+                android:layout_gravity="center" />
+        </LinearLayout>
 
     </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="10"
-            android:background="#e7e7e7"
-            android:translationZ="50dp"></LinearLayout>
+            android:layout_height="fill_parent"
+            android:background="#e7e7e7">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/phoneNumber"
+                android:layout_weight="1"
+                android:padding="5dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/mood"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:padding="5dp" />
+        </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
